--- a/backend.scaffold/package.json
+++ b/backend.scaffold/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
     "class-validator": "^0.13.2",
