--- a/backend.scaffold/package.json
+++ b/backend.scaffold/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.5.1",
+    "@nestjs/websockets": "^7.6.18",
     "@nestjs/typeorm": "^7.1.5",
     "class-validator": "^0.13.2",
     "fs": "^0.0.1-security",
@@ -47,6 +49,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "@types/socket.io": "^2.1.13",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
