--- a/frontend.scaffold/package.json
+++ b/frontend.scaffold/package.json
@@ -19,6 +19,7 @@
     "react-select": "^5.5.7",
     "react-syntax-highlighter": "^15.5.0",
     "sass-mq": "^6.0.0",
+    "socket.io-client": "^2.3.1",
     "sweetalert2": "^11.6.1",
     "sweetalert2-react-content": "^5.0.5",
     "vite-plugin-compress": "^2.1.1"
@@ -38,6 +39,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.5",
     "@types/reactjs-localstorage": "^1.0.0",
+    "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^2.1.0",
     "auto-css-modules-webpack-plugin": "^1.1.1",
     "autoprefixer": "^10.4.13",
@@ -72,6 +74,7 @@
     "nodemon": "^2.0.20",
     "npm-run-all": "4.1.5",
     "prettier": "^2.5.1",
+    "sass": "^1.56.1",
     "sass-loader": "^10.4.1",
     "style-loader": "3.3.1",
     "terser-webpack-plugin": "^5.3.6",
