--- a/backend.scaffold/.env
+++ b/backend.scaffold/.env
@@ -1,3 +1,4 @@
 DATABASE_USER=test
 DATABASE_PASSWORD=test
-DATABASE_URL=data/database.sqlite
+DATABASE_URL=/data/database.sqlite
+PROJECT_URL=project
