--- a/backend.scaffold/ormconfig.json
+++ b/backend.scaffold/ormconfig.json
@@ -1,21 +1,21 @@
 {
     "type": "sqlite",
-    "database": "./data/database.sqlite",
+    "database": "../project/data/database.sqlite",
     "logging": true,
     "autoLoadEntities": true,
     "synchronize": true,
     "entities": [
-        "dist/**/*.entity.js"
+        "../project/dist/**/*.entity.js"
     ],
     "migrations": [
-        "dist/**/*..js"
+        "../project/dist/**/*..js"
     ],
     "subscribers": [
-        "src/subscriber/**/*.ts"
+        "../project/src/subscriber/**/*.ts"
     ],
     "cli": {
-        "entitiesDir": "src/entity",
-        "migrationsDir": "src/migration",
-        "subscribersDir": "src/subscriber"
+        "entitiesDir": "../project/src/entity",
+        "migrationsDir": "../project/src/migration",
+        "subscribersDir": "../project/src/subscriber"
     }
 }
