--- a/backend.scaffold/package.json
+++ b/backend.scaffold/package.json
@@ -9,8 +9,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "cross-env NODE_ENV=production nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -18,38 +18,42 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^7.5.1",
+    "@nestjs/common": "9.2.0",
+    "@nestjs/config": "2.2.0",
+    "@nestjs/core": "9.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^7.5.1",
-    "@nestjs/platform-socket.io": "^7.5.1",
-    "@nestjs/websockets": "^7.6.18",
-    "@nestjs/typeorm": "^7.1.5",
-    "class-validator": "^0.13.2",
+    "@nestjs/platform-express": "9.2.0",
+    "@nestjs/platform-socket.io": "^9.4.2",
+    "@nestjs/typeorm": "9.0.1",
+    "@nestjs/websockets": "9.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "cross-env": "^7.0.3",
     "fs": "^0.0.1-security",
     "fs-extra": "^10.1.0",
     "nest-winston": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
+    "rxjs": "7.2.0",
+    "socket.io": "^4.5.4",
     "sqlite3": "^5.1.2",
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
+    "@nestjs/cli": "^9.5.0",
+    "@nestjs/schematics": "9.0.3",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/socket.io": "3.0.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
-    "@types/socket.io": "^2.1.13",
+    "cross-env": "^7.0.3",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
@@ -58,9 +62,9 @@
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "ts-node": "10.7.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "4.9.3"
   },
   "jest": {
     "moduleFileExtensions": [
