--- a/frontend.scaffold/package.json
+++ b/frontend.scaffold/package.json
@@ -14,15 +14,28 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.9",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.4.2",
     "react-select": "^5.5.7",
     "react-syntax-highlighter": "^15.5.0",
     "sass-mq": "^6.0.0",
-    "socket.io-client": "^2.3.1",
-    "sweetalert2": "^11.6.1",
+    "socket.io-client": "^4.6.2",
+    "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.5",
-    "vite-plugin-compress": "^2.1.1"
+    "vite-plugin-compress": "^2.1.1",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.44",
@@ -39,7 +52,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.5",
     "@types/reactjs-localstorage": "^1.0.0",
-    "@types/socket.io-client": "^3.0.0",
+    "@types/socket.io": "^2.1.13",
     "@vitejs/plugin-react": "^2.1.0",
     "auto-css-modules-webpack-plugin": "^1.1.1",
     "autoprefixer": "^10.4.13",
@@ -86,7 +99,7 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-css-injected-by-js": "^2.1.0",
     "vite-plugin-minify": "^1.5.2",
-    "webpack": "5.74.0",
+    "webpack": "^5.86.0",
     "webpack-bundle-analyzer": "4.7.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.11.1"
