--- a/frontend.scaffold/package.json
+++ b/frontend.scaffold/package.json
@@ -6,9 +6,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "client": "webpack-dev-server --progress --mode development"
+    "client": "webpack-dev-server --progress --mode development",
+    "wbuild": "webpack --progress --mode production"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.4.2",
     "react-select": "^5.5.7",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.1",
     "sass-mq": "^6.0.0",
     "socket.io-client": "^4.6.2",
     "sweetalert2": "^11.4.8",
